--- a/index.html
+++ b/index.html
@@ -25,11 +25,18 @@
                 <h2 class="my_profession">Python developer</h2>
 
                 <h1 class="my_name">Kyrylo Dyachenko</h1>
-                <p class="my_description">Completed live-course for Python Developers in online-school ITEA. Also
-                    completed large Python core
-                    course on the
-                    Udemy. I have both sertificate about it. Now I continue to learn Django, Docker etc. And ready for
-                    work! </p>
+                <p class="my_description">Hi! I'm Kyrylo, young Python Developer. In this profession for about a year.
+                    Before the big war was a lawyer and little
+                    bit estate-developer in Kharkiv, but now I'm fully into PD. At the beginning, I took several online
+                    courses, including
+                    with mentors at the ITEA school, Udemy and others. Have a good knowledge of : Python( Django, Flask,
+                    Asyncio,
+                    BeautifullSoup, UnitTest/PyTest, etc), SQL(SQLite, PostgreSQL), MongoDB, Docker. My experience is
+                    e-commers projects on
+                    the Django, some Flask projects, some small HTML/CSS projects and freelance. Will be glad to become
+                    part of a
+                    professional and friendly team. My location: Kremenchuk, ready for office in this city or remote.
+                    Thank you, good luck! </p>
             </div>
 
             <!-- My projects -->
